Update for new release
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>