@@ -2,12 +2,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.oracle.metrojpms</groupId>
+    <parent>
+        <groupId>com.bravehorsie.metrojpms</groupId>
+        <artifactId>metro-jpms-test</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <groupId>com.bravehorsie.metrojpms</groupId>
     <artifactId>jaxb-ri-client</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Client using JAXB runtime/impl dependency</name>
+    <name>Client testing JAXB binary distribution (runtime and tooling) on JPMS</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,19 +37,39 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-ri</artifactId>
-            <version>2.4.0-b180608.0325</version>
             <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.istack</groupId>
+            <artifactId>istack-commons-tools</artifactId>
+            <version>3.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.dtd-parser</groupId>
+            <artifactId>dtd-parser</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-jxc</artifactId>
+            <version>${jaxb.ri.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bravehorsie.metrojpms</groupId>
+            <artifactId>runtime-runner</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -68,6 +94,17 @@
                             </outputDirectory>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>copy-runner</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/mods</outputDirectory>
+                            <includeArtifactIds>runtime-runner</includeArtifactIds>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
@@ -87,7 +124,7 @@
                         <manifest>
                             <addClasspath>false</addClasspath>
                             <mainClass>
-                                com.oracle.jaxb.riclient.App
+                                com.bravehorsie.jaxb.runtimeclient.App
                             </mainClass>
                         </manifest>
                     </archive>
@@ -111,12 +148,10 @@
                                 <argument>--upgrade-module-path</argument>
                                 <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
                                 <argument>--module-path</argument>
-                                <argument>${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib</argument>
-                                <argument>--add-modules</argument>
-                                <argument>com.sun.xml.bind,com.sun.tools.xjc,com.sun.tools.jxc</argument>
-                                <!--<argument>-jar</argument>
-                                <argument>${project.build.directory}/jaxb-ri-client-1.0-SNAPSHOT.jar</argument>-->
-                                <argument>com.oracle.jaxb.riclient.App</argument>
+                                <argument>${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/jaxb-ri-client-${project.version}.jar:${project.build.directory}/mods/runtime-runner-${project.version}.jar</argument>
+
+                                <argument>--module</argument>
+                                <argument>com.bravehorsie.jaxb.riclient/com.bravehorsie.jaxb.riclient.App</argument>
                                 <!--<argument>&#45;&#45;list-modules</argument>-->
                             </arguments>
                             <longModulepath>false</longModulepath>
@@ -132,14 +167,12 @@
                             <arguments>
                                 <argument>--upgrade-module-path</argument>
                                 <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
-                                <argument>--module-path</argument> <!-- or -p  -->
-                                <argument>
-                                    ${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib
-                                </argument>
+                                <argument>--module-path</argument>
+                                <argument>${project.build.directory}/mods/jaxb-ri/mod</argument>
                                 <argument>-m</argument>
                                 <argument>com.sun.tools.xjc/com.sun.tools.xjc.XJCFacade</argument>
                                 <argument>-p</argument>
-                                <argument>com.oracle.metrojpms</argument>
+                                <argument>com.bravehorsie.metrojpms</argument>
                                 <argument>-d</argument>
                                 <argument>${project.build.directory}/generated-sources</argument>
                                 <argument>${project.build.directory}/classes/schema.xsd</argument>
@@ -160,17 +193,13 @@
                                 <argument>--upgrade-module-path</argument>
                                 <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
                                 <argument>--module-path</argument> <!-- or -p  -->
-                                <argument>
-                                    ${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib
-                                </argument>
-                                <argument>--add-modules</argument>
-                                <argument>com.sun.tools.jxc,relaxngDatatype</argument>
+                                <argument>${project.build.directory}/mods/jaxb-ri/mod</argument>
                                 <argument>-m</argument>
                                 <argument>com.sun.tools.jxc/com.sun.tools.jxc.SchemaGeneratorFacade</argument>
                                 <argument>-d</argument>
                                 <argument>${project.build.directory}/generated-sources</argument>
-                                <argument>${project.build.directory}/classes/com/oracle/metrojpms/Author.java</argument>
-                                <argument>${project.build.directory}/classes/com/oracle/metrojpms/Book.java</argument>
+                                <argument>${project.build.directory}/classes/com/bravehorsie/metrojpms/Author.java</argument>
+                                <argument>${project.build.directory}/classes/com/bravehorsie/metrojpms/Book.java</argument>
                             </arguments>
                             <longModulepath>false</longModulepath>
                         </configuration>
