@@ -2,45 +2,50 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.oracle.metrojpms</groupId>
+    <parent>
+        <groupId>com.bravehorsie.metrojpms</groupId>
+        <artifactId>metro-jpms-test</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <groupId>com.bravehorsie.metrojpms</groupId>
     <artifactId>jaxb-runtime-client</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Client using JAXB runtime/impl dependency</name>
+    <name>Client testing JAXB maven artifacts on JPMS</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>jvnet-nexus-promoted</id>
-            <url>http://maven.java.net/content/repositories/promoted/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.4.0-b180608.0325</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-jxc</artifactId>
+            <version>${jaxb.ri.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-xjc</artifactId>
+            <version>${jaxb.ri.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
         </dependency>
         <dependency>
-            <groupId>com.oracle.metrojpms</groupId>
-            <artifactId>jaxb-ri-client</artifactId>
+            <groupId>com.bravehorsie.metrojpms</groupId>
+            <artifactId>runtime-runner</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
@@ -79,7 +84,7 @@
                         <manifest>
                             <addClasspath>false</addClasspath>
                             <mainClass>
-                                com.oracle.jaxb.runtimeclient.App
+                                com.bravehorsie.jaxb.runtimeclient.App
                             </mainClass>
                         </manifest>
                     </archive>
@@ -91,25 +96,68 @@
                 <version>1.6.0</version>
                 <executions>
                     <execution>
+                        <id>runtime</id>
                         <goals>
                             <goal>exec</goal>
                         </goals>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>--upgrade-module-path</argument>
+                                <argument>${project.build.directory}/mods/jaxb-api-${jaxb.api.version}.jar</argument>
+                                <argument>--module-path</argument>
+                                <modulepath/>
+                                <argument>--module</argument>
+                                <argument>com.bravehorsie.jaxb.runtimeclient/com.bravehorsie.jaxb.runtimeclient.App</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>xjc</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>--upgrade-module-path</argument>
+                                <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
+                                <argument>--module-path</argument>
+                                <modulepath/>
+                                <argument>-m</argument>
+                                <argument>com.sun.tools.xjc/com.sun.tools.xjc.XJCFacade</argument>
+                                <argument>-p</argument>
+                                <argument>com.bravehorsie.metrojpms</argument>
+                                <argument>-d</argument>
+                                <argument>${project.build.directory}/generated-sources</argument>
+                                <argument>${project.build.directory}/classes/schema.xsd</argument>
+                            </arguments>
+                            <longModulepath>false</longModulepath>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jxc</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>--upgrade-module-path</argument>
+                                <argument>${project.build.directory}/mods/jaxb-api-${jaxb.api.version}.jar</argument>
+                                <argument>--module-path</argument> <!-- or -p  -->
+                                <modulepath/>
+                                <argument>-m</argument>
+                                <argument>com.sun.tools.jxc/com.sun.tools.jxc.SchemaGeneratorFacade</argument>
+                                <argument>-d</argument>
+                                <argument>${project.build.directory}/generated-sources</argument>
+                                <argument>${project.build.directory}/classes/com/bravehorsie/metrojpms/Author.java</argument>
+                                <argument>${project.build.directory}/classes/com/bravehorsie/metrojpms/Book.java</argument>
+                            </arguments>
+                            <longModulepath>false</longModulepath>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <executable>java</executable>
-                    <arguments>
-                        <argument>--upgrade-module-path</argument>
-                        <argument>${project.build.directory}/mods/jaxb-api-2.3.0.jar</argument>
-                        <argument>--module-path</argument> <!-- or -p  -->
-                        <modulepath/>
-                        <argument>--add-modules</argument>
-                        <argument>com.sun.xml.bind,java.xml.bind,java.activation,jaxb.ri.client</argument>
-                        <!--<argument>&#45;&#45;list-modules</argument>-->
-                        <argument>-jar</argument>
-                        <argument>${project.build.directory}/jaxb-runtime-client-1.0-SNAPSHOT.jar</argument>
-                    </arguments>
-                </configuration>
             </plugin>
         </plugins>
     </build>
